@@ -29,31 +29,50 @@ import java.io.RandomAccessFile;
 import java.nio.channels.FileLock;
 
 /**
- * Basisklasse zur Verwaltung von Filezugriffen.
- * <p/>
- * A RandomAccessFile provides random access to the file's content.
+ *
+ * A TAEnabledRandomAccessFile provides random access to the file's content and let you append data to the current.
+ * It provides a simple but efficient atomic write.
+ * The first long of the file contains the committed size. Any content beyond the file pointer is ignored.
+ * To write bytes needs to operations. First these bytes are appended to the file.
+ * What is the second operation is to update the new commit position.
+ *
+ * The committed size is the size of the written and committed data.
+ *
+ * The visible size of the file contains the written data. It starts from the end of the header data and has the size of {@link #getCommittedSize()}
+ * Data beyond this range cannot be read and is not available.
+ *
+ * <pre>
+ *   |--------|----................---------|------
+ *   0    start of                  committed size
+ *       visible data                + header size
+ *
+ * </pre>
+ *
+ *
+ * @see java.nio.channels.FileChannel
+ * @see java.io.RandomAccessFile
+ * @see java.nio.channels.FileLock
+ *
  */
 class TAEnabledRandomAccessFile {
 
+
     /**
-     * Groesse in Byte fuer Datentyp int
+     * Header size. As the header contains the commited size (of type long) the header size is 8
      */
-    public static final int INT_BYTES = 4;
-    /**
-     * Groesse in Byte fuer Datentyp long
-     */
-    public static final int HEADER_LENGTH = 8;
+    public static final int HEADER_LENGTH = (Long.SIZE / Byte.SIZE);
     /**
      * Groesse eines Bytes
      */
 
     public static final int BYTE_BYTES = 1;
+
     /**
      * max. Inhalt eines Byte als int *
      */
     public static final int MAX_BYTE_VALUE = (int) Byte.MAX_VALUE;
+
     private static final IPhynixxLogger LOG = PhynixxLogManager.getLogger(TAEnabledRandomAccessFile.class);
-    private static final long SHORT_BYTES = 2;
     /**
      * Das RandomAccessFile, dass zum Schreiben u. Lesen geoeffnet wird.
      */
@@ -61,6 +80,12 @@ class TAEnabledRandomAccessFile {
 
 
     private FileLock fileLock = null;
+
+
+    /**
+     * redundant committed size to achieve perform range checks
+     */
+    private long committedSize=0;
 
 
     /**
@@ -115,7 +140,7 @@ class TAEnabledRandomAccessFile {
 
 
     /**
-     * @return byte availbale staing from the current position
+     * @return byte available starting from the current position to the visible end of the file (==committed size)
      * @throws IOException
      */
     public long available() throws IOException {
@@ -125,11 +150,8 @@ class TAEnabledRandomAccessFile {
 
 
     /**
-     * Liefert die aktuelle Position im Bereich der Nutzdaten.
-     * Evtl. HeaderDaten werden ignoriert
-     *
-     * @return Die aktuelle Position im channel
-     * @throws java.io.IOException , IO-Fehler
+     * @return current position starting from the end of the header data.
+     * @throws java.io.IOException , IO Error
      * @see
      */
     long position() throws IOException {
@@ -139,11 +161,11 @@ class TAEnabledRandomAccessFile {
 
     private void check()  {
         if (isClose()) {
-            throw new IllegalStateException("TAEnabledRandomAccessFile ist geschlossen");
+            throw new IllegalStateException("TAEnabledRandomAccessFile is closed");
         }
 
         if( this.fileLock==null || !fileLock.isValid()) {
-            throw new IllegalStateException("Filelock ist nicht valide");
+            throw new IllegalStateException("Filelock is not valid");
         }
     }
 
@@ -153,27 +175,14 @@ class TAEnabledRandomAccessFile {
      * Evtl. HeaderBrereiche werden ignoriert
      *
      * @param newPosition Position
-     * @throws java.io.IOException IO-Fehler
+     * @throws java.io.IOException IO Error
      * @author Phynixx
      */
-    public void position(long newPosition) throws IOException {
+    private void position(long newPosition) throws IOException {
 
         check();
         checkPosition(newPosition);
         this.getRandomAccessFile().seek(newPosition + getHeaderLength());
-    }
-
-    /**
-     * Setzt Bereich der Nutzdaten auf die angegebenen Position.
-     * Evtl. HeaderBrereiche werden ignoriert
-     *
-     * @throws java.io.IOException IO-Fehler
-     * @author Phynixx
-     */
-    public void incPosition(long length) throws IOException {
-        check();
-        long newPosition = this.position() + length;
-        this.position(newPosition);
     }
 
     /**
@@ -213,70 +222,73 @@ class TAEnabledRandomAccessFile {
     }
 
     /**
+     *
+     *
      * Gibt die Groesse des Comitteten Bereichs in Byte zurueck. Da am Anfang
      * der Datei die Dateigroesse geschrieben wird, ist die Mindest-Groesse 4.
      * Bei 4 Byte sind also noch keine Daten in die Datei geschrieben worden.
      *
-     * @return Die Committete Groesse in Bytes
-     * @throws java.io.IOException IO-Fehler
+     * @return commited size (bytes)
+     * @throws java.io.IOException IO-Error
      */
     public long getCommittedSize() throws IOException {
         check();
 
-        long cp = this.position();
+        return this.committedSize;
 
-        this.getRandomAccessFile().seek(0);
-        long committedSize = this.getRandomAccessFile().readLong();
-        this.position(cp);
-
-        return committedSize;
     }
 
 
     /**
-     * Liest einen int-Wert aus der Datei ( wird fuer restart benoetigt )
      *
-     * @return int, Die aus der Datei gelesene Zahl
-     * @throws java.io.IOException IO-Fehler
+     * reads the next INTEGER starting form the current file position.
+     * If there are not enough bytes available (from the current position to the visible end of the file) to read the data an exception is thrown.
+     *
+     * @return read value
+     * @throws java.io.IOException IO Error
      * @author Schmidt-Casdorff
      */
     public int readInt() throws IOException {
         check();
+        checkRead(4);
         return raf.readInt();
     }
 
     /**
-     * Liest einen int-Wert aus der Datei ( wird fuer restart benoetigt )
      *
-     * @return int, Die aus der Datei gelesene Zahl
-     * @throws java.io.IOException IO-Fehler
+     * reads the next SHORT starting form the current file position.
+     * If there are not enough bytes available (from the current position to the visible end of the file) to read the data an exception is thrown.
+     *
+     * @return read value
+     * @throws java.io.IOException IO Error
      * @author Schmidt-Casdorff
      */
     public short readShort() throws IOException {
         check();
+        checkRead(2);
         return raf.readShort();
     }
 
-
     /**
-     * kopiert den vollstaendigen Inhalt der Datei in einen ByteBuffer
      *
-     * @return ByteBuffer mit dem Inhalt der Datei
+     * reads the next LONG starting form the current file position.
+     * If there are not enough bytes available (from the current position to the visible end of the file) to read the data an exception is thrown.
+     *
+     * @return read value
+     * @throws java.io.IOException IO Error
+     * @author Schmidt-Casdorff
      */
-    public byte[] readContent() throws IOException {
+    public long readLong() throws IOException {
         check();
-        long comSize = getCommittedSize();
-        //Wenn die Datei leer ist, einen ByteBuffer der Groesse 0 Bytes zurueckgeben
-        if (comSize == 0) {
-            return new byte[]{};
-        } else {
-            this.position(0);
-            return read(comSize);
-        }
+        checkRead(8);
+        return raf.readLong();
     }
 
-
     /**
+     * reads the next length bytes starting form the current file position.
+     * If there are not enough bytes available (from the current position to the visible end of the file) to read the data an exception is thrown.
+     *
+     * overflow (position is beyond committed data),  is
      * kopiert den Bereich zwischen startPosition und enedPosition der Datei in den ByteBuffer.
      * Es wird die Read-methode des RandomAccessFiles genommen, da sich
      * herausgestellt hat, dass die Methode im Batchbetrieb etwas schneller
@@ -284,52 +296,62 @@ class TAEnabledRandomAccessFile {
      * Ee werden bytes gelesen fuer die gilt: <br>
      * startPosition <= b < endPosition
      *
-     * @param length Anzahl der zu lesenden Zeichen
-     *               werden soll
-     * @return ByteBuffer mit dem Inhalt der Datei zwischen startPosition und enedPosition
-     * @throws java.io.IOException IO-Fehler
+     * @param length umber of bytes to be read
+     * @return content
+     * @throws java.io.IOException IO Error
      */
-    public byte[] read(long length) throws IOException {
+    public byte[] read(int length) throws IOException {
         check();
 
-        if (length >= new Long(Integer.MAX_VALUE).longValue()) {
-            throw new IllegalArgumentException("Length of read area may not exeed " + Integer.MAX_VALUE);
+        checkRead(length);
+
+        if (length >= Integer.MAX_VALUE) {
+            throw new IOException("Length of read area may not exceed " + Integer.MAX_VALUE);
         }
 
-        int intLength = new Long(length).intValue();
+        if (this.position()+length > this.getCommittedSize()) {
+            throw new IOException("Length of read area may not exceed the committed size of " + this.getCommittedSize());
+        }
+
+        int intLength = Long.valueOf(length).intValue();
 
         byte[] buffer = new byte[intLength];
 
         if (isClose()) {
-            throw new IOException("TAEnabledChanneList geschlossen");
-        }
-        // ueberpruefung der Eingabeargumente
-        if (buffer.length < intLength) {
-            throw new IllegalArgumentException("Uebergebener Buffer zu klein fuer angeforderten Lesezugriff : " + intLength);
+            throw new IOException("TAEnabledChanneList ist closed");
         }
 
         long retVal = this.getRandomAccessFile().read(buffer, 0, intLength);
 
         if (retVal < 0) {
-            throw new IOException("Channel kann nicht bis zur Position " + (position() + intLength) + " lesen");
+            throw new IOException("Channel cannot read " + (position() + intLength) );
         }
         return buffer;
     }
 
+    private void checkRead(int length) throws IOException {
+        if( this.available() < length) {
+            throw new IOException("Cannot read "+length +" byte. Starting from current position "+position()+" there are only "+this.available()+" bytes available");
+        }
+    }
+
+
     /**
-     * Schreibt den Inhalt des uebergebenen ByteBuffers in die Datei. Achtung:
-     * ruft zuerst flip auf. Setzt nach dem Schreiben die Position auf 0 und
-     * das Limit auf die Kapazitaet des ByteBuffers (zur weiteren Verwendung)
+     * appends a byte[] to the file, but doesn't commit.
      *
-     * @param buffer , der in die Datei zu schreiben ist.
-     * @throws java.io.IOException , falls irgendetwas beim Schreiben schief geht
+     * In order to re-read the content it is recommended to store the size of the byte[] before writing the byte[]. This value can be used as the value of parameter length.
+     *
+     * @param buffer value to be appended
+     * @throws java.io.IOException IO Error
+     *
+     * @see #read(int)
      */
     public void write(byte[] buffer) throws IOException {
         check();
 
         //assert buffer != null : "Der Buffer ist null";
         if (isClose()) {
-            throw new IOException("TAEnabledChanneList geschlossen");
+            throw new IOException("TAEnabledChanneList is closed");
         }
         long currentPosition = this.position();
         this.raf.write(buffer);
@@ -341,64 +363,70 @@ class TAEnabledRandomAccessFile {
     }
 
     /**
-     * Schreibt einen int-Wert in den Channel
+     * appends a SHORT to the file, but doesn't commit
      *
-     * @param value ,Der zu schreibende int-Wert, an der aktuellen Position.
-     * @throws java.io.IOException IO-Fehler
+     * @param value value to be appended
+     * @throws java.io.IOException IO Error
      */
     public void writeShort(short value) throws IOException {
         check();
-        long currentPosition = this.position();
-
-
         // increments the current position
         getRandomAccessFile().writeShort(value);
-        // this.incPosition(INT_BYTES);
-
-        assert this.position() - currentPosition == SHORT_BYTES : "Expected new position : " + currentPosition + INT_BYTES + " actual position " + this.position();
-
     }
 
     /**
-     * Schreibt einen int-Wert in den Channel
+     * appends an INT to the file, but doesn't commit
      *
-     * @param value ,Der zu schreibende int-Wert, an der aktuellen Position.
-     * @throws java.io.IOException IO-Fehler
+     * @param value value to be appended
+     * @throws java.io.IOException IO Error
      */
     public void writeInt(int value) throws IOException {
         check();
-        long currentPosition = this.position();
-
-
         // increments the current position
         getRandomAccessFile().writeInt(value);
-        // this.incPosition(INT_BYTES);
-
-        assert this.position() - currentPosition == INT_BYTES : "Expected new position : " + currentPosition + INT_BYTES + " actual position " + this.position();
 
     }
 
 
     /**
-     * Schreibt einen int-Wert in den Channel
+     * appends a LONG to the file, but doesn't commit
      *
-     * @param value ,Der zu schreibende int-Wert, an der aktuellen Position.
-     * @throws java.io.IOException IO-Fehler
+     * @param value value to be appended
+     * @throws java.io.IOException IO Error
      */
     public void writeLong(long value) throws IOException {
         check();
-        long currentPosition = this.position();
-
         // increments the current position
         getRandomAccessFile().writeLong(value);
 
-        // this.incPosition(HEADER_LENGTH);
+    }
 
-        assert this.position() - currentPosition == HEADER_LENGTH : "Expected new position : " + currentPosition + HEADER_LENGTH + " actual position " + this.position();
+    /**
+     * sets the current position to the start of the data. (position()==0)
+     * @throws IOException
+     */
+    public void rewind() throws IOException {
+        check();
+        this.position(0);
+
+    }
+
+    /**
+     * sets the current position to end of the visible data. (position()==getCommittedSize())
+     * @throws IOException
+     */
+    public void forwardWind() throws IOException {
+        check();
+        this.position(this.getCommittedSize());
 
     }
 
 
+
+    /**
+     * updates the committed size with 0. All data is truncated
+     * @throws IOException
+     */
     public void reset() throws IOException {
         check();
 
@@ -409,75 +437,43 @@ class TAEnabledRandomAccessFile {
         // forget about the rest
         this.getRandomAccessFile().getChannel().truncate(TAEnabledRandomAccessFile.HEADER_LENGTH);
 
-
-
-
     }
 
 
     /**
-     * Schreibt die Position an den Anfang der Datei
-     * Die Position entspricht der gueltigen Dateigroesse.
      *
-     * @throws java.io.IOException , Fehler beim Schreiben der Datei.
+     * updates the first 4 bytes of the file with the current position of the randomAccessFile
+     *
+     * @throws java.io.IOException Error updating the file
      */
     public void commit() throws IOException {
         check();
-        //Hole die Position der Nutzdaten
         long currentPosition = this.position();
 
-        // Positioniere an den Anfang ders headers
+        // go to the header in order to be prepared to update the committed size
         this.getRandomAccessFile().seek(0);
 
+        // update the commiited data with the current position
         getRandomAccessFile().writeLong(currentPosition);
+
+
+        // reset the file position to the original value
         this.position(currentPosition);
 
         // write through
         this.getRandomAccessFile().getChannel().force(false);
 
+        this.committedSize= currentPosition;
 
-        /**
-        long comSize = getCommittedSize();
-        if( comSize!=currentPosition) {
-            throw new IllegalStateException("commited size has unexpected value");
-        }
-         **/
     }
 
     /**
-     * positioniert die Schreibposition auf die Position des letzten committs
-     * Wenn die aktuelle Position bereits innerhalb des committeten Bereichs
-     * liegt, bleibt Position unveraendert
+     * restores the committed size  recored in the first 4 bytes of the file.     *
+     * the randomaccessFile is positioned to this position.
      *
-     * @throws java.io.IOException IO-Fehler
-     */
-    public void rollback() throws IOException {
-        check();
-        this.getRandomAccessFile().seek(0);
-        // Hole bestaetigte Groesse der Nutzdaten
-        long newPosition = getRandomAccessFile().readLong();
-        this.position(newPosition);
-    }
-
-    /**
-     * Gibt zurueck, ob Daten Comittet wurden. Daten wurden dann commitet,
-     * wenn die comittete-Groesse groesser 4 Byte ist, da in den 1. vier Byte
-     * die Dateigroesse steht.
+     * The content beyond this new position is not destroyed but will be be overwritten,
      *
-     * @return true, wenn es Daten gibt, die comittet sind, sonst false.
-     * @throws java.io.IOException IO-Fehler
-     */
-    public boolean hasCommittedData() throws IOException {
-        return (getCommittedSize() > HEADER_LENGTH);
-    }
-
-
-    /**
-     * Stellt die Comittet Dateigroesse wieder her. Die Comittete Dateigroesse
-     * steht jeweils am Anfang der Datei. Positioniert auf die neu gesetzte
-     * fileSize.
-     *
-     * @throws java.io.IOException IO-Fehler
+     * @throws java.io.IOException IO-Error
      * @see
      */
     private void restoreCommittedSize() throws IOException {
@@ -492,7 +488,10 @@ class TAEnabledRandomAccessFile {
             privCommittedSize = this.getRandomAccessFile().readLong();
         }
         this.position(privCommittedSize);
+        this.committedSize=privCommittedSize;
     }
+
+
 
 
 }
